--- a/lane_detector/CMakeLists.txt
+++ b/lane_detector/CMakeLists.txt
@@ -142,7 +142,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(lane_detector src/main.cpp src/LaneDetector.cpp)
+add_executable(lane_detector src/main.cpp src/LinePointDetector.cpp)
 #add_dependencies(test_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(lane_detector
   ${catkin_LIBRARIES}
