--- a/lane_detector/CMakeLists.txt
+++ b/lane_detector/CMakeLists.txt
@@ -54,11 +54,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+#add_message_files(
+#FILES
+#AckermannDriveStamped.msg
+#)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -142,7 +141,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(lane_detector src/main.cpp src/LinePointDetector.cpp)
+add_executable(lane_detector src/main.cpp src/LinePointDetector.cpp src/LaneDetector.cpp)
 #add_dependencies(test_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(lane_detector
   ${catkin_LIBRARIES}
