--- a/lane_detector/CMakeLists.txt
+++ b/lane_detector/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
 	std_msgs
 	image_transport
 	sensor_msgs
+	message_filters
 )
 
 #find_package(OpenCV 3 REQUIRED)
