--- a/kuuve_parking/package.xml
+++ b/kuuve_parking/package.xml
@@ -55,18 +55,21 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>obstacle_detector</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>message_generation</build_export_depend>
+  <build_export_depend>obstacle_detector</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>obstacle_detector</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
