Modify some functions and parameters for dotted Lines
but there are some problems
1. always use top line
2. should calculate all lines centers for visualization?

--- a/lane_detector/config/hardware_control.yaml
+++ b/lane_detector/config/hardware_control.yaml
@@ -7,5 +7,9 @@ hardware_control:
     throttle: 7
   # control_error *= factor 
   factor:
-    yaw: 0.4
-    lateral: 0.8
+    yaw:
+      - 0.4   # top_line
+      - 0.4   # bottom_line
+    lateral:
+      - 0.8
+      - 0.8
